--- a/src/main/webapp/layout.xhtml
+++ b/src/main/webapp/layout.xhtml
@@ -23,6 +23,7 @@
 					<p:button href="/entry" value="Novo Lançamento" />
 					<p:button href="/entry-item" value="Novo item" />
 					<p:button href="/list-entry-item" value="Lista de itens" />
+					<p:button href="/intersection" value="Interseção" />
 				</f:facet>
 			</p:toolbar>
 		</div>
